# libdownload

./: Makefile.am  configure.ac
lib/: DownloadException.h  DownloadManager.cpp  DownloadManager.h  Makefile.am  ProtocolBase.h  SingleCurlInitHelper.h  TaskBase.h  Utility.h  includes.h  libdownload.xmind  uml.dia
lib.old/: DownloadManager.cpp  DownloadManager.h  Global.h  Makefile.am  ProtocolBase.h  ProtocolFactory.cpp  ProtocolFactory.h  TaskBase.h  libdownload.h
lib.old/plugins/: PostPluginBase.h  PrePluginBase.h
lib.old/protocols/: HttpProtocol.cpp  HttpProtocol.h  HttpProtocolImpl.h  Makefile.am  ProtocolBase.h
lib.old/protocols/plugins/: ProtocolPluginsDefine.h
lib.old/utility/: BitMap.cpp  BitMap.h  File.h  FilePosixApi.h  Makefile.am  SimpleXmlParser.cpp  SimpleXmlParser.h  Utility.h
lib/plugins/: PrePluginBase.h
lib/protocols/: HttpProtocol.cpp  Makefile.am  ProtocolBase.h  TaskBase.cpp  TaskBase.h
lib/protocols/http/: BitMap.cpp  BitMap.h  HttpConfigure.h  HttpProtocol.h  HttpSession.cpp  HttpSession.h  HttpSession.inc  HttpTask.cpp  HttpTask.h
lib/utility/: Allocator.h  BitMap.h  DownloadException.h  File.h  FileManager.h  FilePosixApi.h  File_unittest.cpp  LocalPtr.h  Makefile.am  SimpleXmlParser.cpp  SimpleXmlParser.h  SingleCurlHelper.h  SocketManager.h  Utility.h  socket.h
m4/: ax_boost_base.m4  ax_boost_signals.m4
src/: DownloadManager.cpp  DownloadManager.h  Global.h  Makefile.am  ProtocolFactory.cpp  ProtocolFactroy.cpp  ProtocolFactroy.h  main.cpp
src/plugins/: PluginBase.h  PostPluginBase.h
src/protocols/: HttpProtocol.cpp  HttpProtocol.h  HttpProtocolImpl.h  Makefile.am  Protocol.cpp  ProtocolBase.h  ProtocolDynamicLoader.h  ProtocolException.h  ProtocolFactroy.h
src/protocols/http/: HttpProtocol.cpp  HttpProtocol.h  HttpProtocolImpl.h
src/utility/: BitMap.cpp  BitMap.h  DownloadException.h  File.h  FilePosixApi.h  Makefile.am  SimpleXmlParser.cpp  SimpleXmlParser.h  SingleCurlHelper.h  Utility.h
unittest/: DownloadManager_unittest.cpp  Makefile.am  Makefile.in  ProtocolFactory_unittest.cpp
unittest/gtest/: Makefile.am  Makefile.in
unittest/gtest/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-param-test.h  gtest-param-test.h.pump  gtest-typed-test.h  gtest.h
unittest/gtest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util-generated.h  gtest-param-util-generated.h.pump  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h  gtest-type-util.h.pump
unittest/gtest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc
unittest/protocol/: HttpProtocol_unittest.cpp  HttpProtocol_unittest.sh
unittest/protocols/: BitMap_unittest.cpp  HttpProtocol_unittest.cpp  HttpProtocol_unittest.sh  HttpSession_unittest.cpp  HttpSession_unittest.sh  HttpTask_unittest.cpp  HttpTask_unittest.sh
unittest/utility/: Allocator_unittest.cpp  BitMap_unittest.cpp  File_unittest.cpp  LocalPtr_unittest.cpp  Makefile  Makefile.am  Makefile.in  SimpleXmlParser_unittest.cpp  SocketManager_unittest.cpp
