noinst_LTLIBRARIES = libutility.la

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/lib/

libutility_la_SOURCES = \
	Utility.h \
	DownloadException.h \
	File.h \
	FilePosixApi.h \
	SocketManager.h

#    SingleCurlHelper.h \
#    BitMap.cpp \
#    BitMap.h \
#    SimpleXmlParser.cpp \
#    SimpleXmlParser.h

libutility_la_CPPFLAGS = $(GLIB_CFLAGS)
