noinst_LTLIBRARIES = libutility.la

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src/

libutility_la_SOURCES = \
    Utility.h \
    DownloadException.h \
    BitMap.cpp \
    BitMap.h \
    File.h \
    FilePosixApi.h \
    SimpleXmlParser.cpp \
    SimpleXmlParser.h

libutility_la_CPPFLAGS = $(GLIB_CFLAGS)
