#check_PROGRAMS =

#check_PROGRAMS += BitMap_unittest
#BitMap_unittest_SOURCES = BitMap_unittest.cpp \
#                          ../../src/utility/BitMap.cpp
#BitMap_unittest_CPPFLAGS = -I../../src/
#BitMap_unittest_LDADD = ../gtest/lib/libgtest_main.la

#check_PROGRAMS += File_unittest
#File_unittest_SOURCES = File_unittest.cpp
#File_unittest_CPPFLAGS = -I../../src/
#File_unittest_LDADD = ../gtest/lib/libgtest_main.la
